--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "^2.2.3",
-    "normalize.css": "^4.1.1"
+    "normalize.css": "^4.1.1",
+    "npm": "^6.1.0",
+    "postcss-mixins": "^6.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
