--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "dependencies": {
     "jquery": "^2.2.3",
     "normalize.css": "^4.1.1",
-    "npm": "^6.1.0",
+    "npm": "^6.2.0",
     "postcss-mixins": "^6.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.12.8",
+    "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.1.1",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^4.3.5",
     "postcss-import": "^8.1.2",
     "postcss-nested": "^1.0.0",
