--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.1.1",
+    "gulp-rename": "^1.3.0",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^4.3.5",
     "postcss-import": "^8.1.2",
