--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-rename": "^1.3.0",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^4.3.5",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^8.1.2",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0"
